--- a/renderer/index.html
+++ b/renderer/index.html
@@ -5,11 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <!-- PapaParse for CSV parsing -->
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.1/papaparse.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-2.18.2.min.js"></script>
   <title>Financial Dashboard</title>
 </head>
 <body>
+  <div class="chart-toolbar">
+    <button class="range-btn" data-range="all">All time</button>
+    <button class="range-btn" data-range="6m">Past 6 Months</button>
+    <button class="range-btn" data-range="1m">Recent Month</button>
+  </div>
+  <div id="balance-chart"></div>
+
   <div class="toolbar">
     <input id="search" placeholder="Search transactions…" />
     <button id="filter">🔍</button>
@@ -31,6 +38,7 @@
     </table>
   </div>
 
-  <script src="renderer.js"></script>
+  <script type="module" src="renderer.js"></script>
+
 </body>
 </html>
